# docs/swagger.yaml
@@ -3,18 +3,20 @@ definitions:
   models.Transaction:
     properties:
       amount:
-        type: integer
+        type: number
       description:
         type: string
       id:
         type: string
       type:
         type: string
-      user_id:
-        type: string
+      user:
+        $ref: '#/definitions/models.User'
     type: object
   models.User:
     properties:
+      balance:
+        type: number
       email:
         type: string
       id:
@@ -53,6 +55,22 @@ paths:
       tags:
       - transactions
   /api/transactions:
+    get:
+      consumes:
+      - application/json
+      description: Get transactions
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Transaction'
+            type: array
+      summary: Get transactions
+      tags:
+      - transactions
     post:
       consumes:
       - application/json
@@ -119,23 +137,6 @@ paths:
           schema:
             type: string
       summary: Update transaction
-      tags:
-      - transactions
-  /api/transactions/{userId}:
-    get:
-      consumes:
-      - application/json
-      description: Get transactions
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.Transaction'
-            type: array
-      summary: Get transactions
       tags:
       - transactions
   /auth/signin:
