# internal/handler/transaction.go
@@ -19,7 +19,7 @@ import (
 func (h *Handler) GetTransactions(c *fiber.Ctx) error {
 	userId := c.Locals("userId").(string)
 
-	transaction, err := h.Service.GetTransactions(c.Context(), userId)
+	transaction, err := h.service.GetTransactions(c.Context(), userId)
 
 	if err != nil {
 		return err
@@ -46,7 +46,7 @@ func (h *Handler) CreateTransaction(c *fiber.Ctx) error {
 		return err
 	}
 
-	id, err := h.Service.CreateTransaction(c.Context(), userId, input)
+	id, err := h.service.CreateTransaction(c.Context(), userId, input)
 	if err != nil {
 		return err
 	}
@@ -67,7 +67,7 @@ func (h *Handler) CreateTransaction(c *fiber.Ctx) error {
 func (h *Handler) GetTransaction(c *fiber.Ctx) error {
 	id := c.Params("id")
 
-	transaction, err := h.Service.GetTransaction(c.Context(), id)
+	transaction, err := h.service.GetTransaction(c.Context(), id)
 
 	if errors.Is(err, mongo.ErrNoDocuments) {
 		return c.Status(fiber.StatusNotFound).SendString("transaction not found")
@@ -78,7 +78,7 @@ func (h *Handler) GetTransaction(c *fiber.Ctx) error {
 		return c.Status(fiber.StatusInternalServerError).SendString("Internal Server Error")
 	}
 
-	if transaction.User.ID != c.Locals("userId").(string) {
+	if transaction.User.ID.Hex() != c.Locals("userId").(string) {
 		return c.Status(fiber.StatusForbidden).SendString("Forbidden")
 	}
 
@@ -108,19 +108,19 @@ func (h *Handler) UpdateTransaction(c *fiber.Ctx) error {
 		return err
 	}
 
-	transaction, err := h.Service.GetTransaction(c.Context(), id)
+	transaction, err := h.service.GetTransaction(c.Context(), id)
 
-	if transaction.User.ID != c.Locals("userId").(string) {
+	if transaction.User.ID.Hex() != c.Locals("userId").(string) {
 		return c.Status(fiber.StatusForbidden).SendString("Forbidden")
 	}
 
-	_, err = h.Service.UpdateTransaction(c.Context(), id, input)
+	_, err = h.service.UpdateTransaction(c.Context(), id, input)
 
 	if err != nil {
 		return err
 	}
 
-	if transaction.User.ID != c.Locals("userId").(string) {
+	if transaction.User.ID.Hex() != c.Locals("userId").(string) {
 		return c.Status(fiber.StatusForbidden).SendString("Forbidden")
 	}
 
@@ -140,7 +140,7 @@ func (h *Handler) UpdateTransaction(c *fiber.Ctx) error {
 func (h *Handler) DeleteTransaction(c *fiber.Ctx) error {
 	id := c.Params("id")
 
-	transaction, err := h.Service.GetTransaction(c.Context(), id)
+	transaction, err := h.service.GetTransaction(c.Context(), id)
 
 	if err != nil {
 		return c.Status(fiber.StatusNotFound).SendString("transaction not found")
@@ -150,7 +150,7 @@ func (h *Handler) DeleteTransaction(c *fiber.Ctx) error {
 		return c.Status(fiber.StatusForbidden).SendString("Forbidden")
 	}
 
-	err = h.Service.DeleteTransaction(c.Context(), c.Params("id"))
+	err = h.service.DeleteTransaction(c.Context(), c.Params("id"))
 
 	if err != nil {
 		return err
@@ -164,11 +164,11 @@ func (h *Handler) DeleteTransaction(c *fiber.Ctx) error {
 func (h *Handler) AnalyzeTransactions(c *fiber.Ctx) error {
 	userId := c.Locals("userId").(string)
 
-	res, err := h.Service.AnalyzeTransactions(c.Context(), userId)
+	res, err := h.service.AnalyzeTransactions(c.Context(), userId)
 
 	if err != nil {
 		return err
 	}
 
-	return c.Status(fiber.StatusOK).JSON(res[0])
+	return c.Status(fiber.StatusOK).JSON(res)
 }
